# pdmp_jax

./: .gitignore  LICENSE  README.md  benchmark.py  example.ipynb  pyproject.toml  run_benchmarks_uv.sh  test.py
figures/: high_dimension.py  mixture.py  mixture_of_20_gaussians.py  mixture_of_two_gaussians.py
src/pdmp_jax/: __init__.py  brent.py  namedtuples.py  sampling_loop.py  upper_bound.py
src/pdmp_jax/samplers/: Boomerang.py  BouncyParticle.py  ForwardEventChain.py  SpeedupZigZag.py  ZigZag.py  __init__.py  pdmp.py
tests/: test_brent.py
